--- a/DeveloperDocumentation.html
+++ b/DeveloperDocumentation.html
@@ -33,17 +33,27 @@
     <p>Click the links below to view the documentation for the files:</p>
 
     <ul>
-        <li><a href="LEXER.html" target="_blank">Lexer</a></li>
-        <li><a href="SYNTAX.html" target="_blank">Parser, Evaluator, Compiler</a></li>
+        <li><a href="COMPILERS_IMG/LEXER.html" target="_blank">Lexer</a></li>
+        <li><a href="COMPILERS_IMG/SYNTAX.html" target="_blank">Parser, Evaluator, Compiler</a></li>
+        <li><a href="COMPILERS_IMG/PyVM.html" target="_blank">VM</a></li>
+        <li><a href="COMPILERS_IMG/SHELL.html" target="_blank">Shell</a></li>     
     </ul>
 
     <h2>Embedded Developer Documentation Files:</h2>
 
     <p>SYNTAX.html (Parser, Evaluator, Compiler) embedded:</p>
-    <iframe src="SYNTAX.html" width="800" height="400"></iframe>
+    <iframe src="COMPILERS_IMG/SYNTAX.html" width="800" height="400"></iframe>
 
     <p>LEXER.html (Lexer) embedded:</p>
-    <iframe src="LEXER.html" width="800" height="400"></iframe>
+    <iframe src="COMPILERS_IMG/LEXER.html" width="800" height="400"></iframe>
+
+    <p>VM (embedded)</p>
+    <iframe src="COMPILERS_IMG/PyVM.html" width="800" height="400"></iframe>
+
+    <p>SHELL.html (SHELL) embedded:</p>
+    <iframe src="COMPILERS_IMG/SHELL.html" width="800" height="400"></iframe>
+
+
 
 </body>
 </html>
