--- a/Gandhara_Mathura_Presentation/quiz.html
+++ b/Gandhara_Mathura_Presentation/quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indian Heritage Quiz</title>
+    <title>Ancient Indian Art Quiz - Mathura and Gandhara</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Load Lucide Icons -->
